[package]
name = "arizona2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.30", features = ["derive"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }
tokio = "1.44.1"
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v7", "serde"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "uuid"] }
chrono = "0.4.40"
dotenv = "0.15.0"
