[package]
name = "arizona2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.30", features = ["derive"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }
tokio = { version = "1.44.1", features = ["rt", "macros"] }
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v7", "serde"] }
sqlx = { version = "=0.7.3", features = ["runtime-tokio", "postgres", "uuid"] }
chrono = "0.4.40"
dotenv = "0.15.0"
iced = { version = "0.13.0", features = ["tokio"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
pgvector = { version = "0.4", features = ["postgres"] }
tracing-subscriber = "0.3"
tracing = "0.1"